# gpt-plus

./: .gitignore  README.md  ai.py  autogenmod.py  data_clean.py  logreg.ipynb  main.py  merge.py  naivebayes.py  naivebayes_test.py  pyproject.toml  test_sample.py
pickle-db/: pickle
